--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 갓생살자!</p>
     <div class="flex-row wrap">
-        <div class="bucket img1 center">Python 기초 공부하기</div>
+        <div class="bucket img1 center done">Python 기초 공부하기</div>
         <div class="bucket img2 center">Java script 공부하기</div>
         <div class="bucket img2 center">Java 공부하기</div>
         <div class="bucket img1 center">성적장학금받기</div>
