--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023년 버킷리스트</title>
+    <title>2023년 1분기 버킷리스트</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Gamja+Flower&family=Hahmlet:wght@500;600&display=swap');
+
         * {
-             font-family: 'Hahmlet', serif;
+            font-family: font-family: 'Gaegu', cursive;
+            font-family: 'Gamja Flower', cursive;
+            font-family: 'Hahmlet', serif;
         }
+
         .title {
             color: white;
-            background-color: tomato;
+            background-color: mediumslateblue;
             font-size: 24px;
             padding: 4px 14px;
             border-radius: 8px;
@@ -26,6 +30,7 @@
 
         .msg {
             font-weight: bold;
+            color: darkseagreen;
         }
 
         .bucket {
@@ -37,7 +42,6 @@
             background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
             background-size: cover;
             background-position: center;
-
         }
 
         .img2 {
@@ -46,19 +50,20 @@
             background-position: center;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg center">
-    <h1 class="title">2023 신년계획</h1>
+<body class="bg-t5 center">
+    <h1 class="title">2023년 1분기 목표</h1>
     <p class="msg">올해는 꼭 갓생살자!</p>
     <div class="flex-row wrap">
-        <div class="bucket img1 center">Python 기초 공부하기</div>
-        <div class="bucket img2 center">Java script 공부하기</div>
-        <div class="bucket img2 center">Java 공부하기</div>
-        <div class="bucket img1 center">성적장학금받기</div>
-        <div class="bucket img1 center">HSK4급 따기</div>
-        <div class="bucket img2 center">다이어트하기</div>
+        <div class="bucket img1-t5 center">52kg 달성하기</div>
+        <div class="bucket img2-t5 center">200만원 모으기</div>
+        <div class="bucket img2-t3 center">Python 공부하기</div>
+        <div class="bucket img1-t3 center">Java 공부하기</div>
+        <div class="bucket img1-t2 center">HSK4급 따기</div>
+        <div class="bucket img2-t2 center">다른 분야 책 5권 읽기</div>
     </div>
 
 </body>
