--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2023년 1분기 버킷리스트</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Gamja+Flower&family=Hahmlet:wght@500;600&display=swap');
-
+        @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Hahmlet:wght@500;600;700&display=swap');
         * {
-            font-family: font-family: 'Gaegu', cursive;
             font-family: 'Gamja Flower', cursive;
             font-family: 'Hahmlet', serif;
         }
@@ -30,7 +28,6 @@
 
         .msg {
             font-weight: bold;
-            color: darkseagreen;
         }
 
         .bucket {
