--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body class="bg-t5 center">
-    <h1 class="title">2023년 1분기 목표</h1>
+    <h1 class="title">2023년 </h1>
     <p class="msg">올해는 꼭 갓생살자!</p>
     <div class="flex-row wrap">
         <div class="bucket img1-t5 center">52kg 달성하기</div>
@@ -61,6 +61,8 @@
         <div class="bucket img1-t3 center">Java 공부하기</div>
         <div class="bucket img1-t2 center">HSK4급 따기</div>
         <div class="bucket img2-t2 center">다른 분야 책 5권 읽기</div>
+        <div class="bucket img1-t3 center">일본어 기초책 끝내기</div>
+        <div class="bucket img2-t3 center">태권도 3단따기</div>
     </div>
 
 </body>
