--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body class="bg-t5 center">
-    <h1 class="title">2023년 </h1>
+    <h1 class="title">2023년 버킷리스트</h1>
     <p class="msg">올해는 꼭 갓생살자!</p>
     <div class="flex-row wrap">
         <div class="bucket img1-t5 center">52kg 달성하기</div>
